addresses bug on #1571, button spacing

--- a/scss/components/_results-framework.scss
+++ b/scss/components/_results-framework.scss
@@ -117,7 +117,10 @@
 .level-card--collapsed__actions {
     // contains: actions__*
 }
-.actions__top {}
+.actions__top {
+    display: flex;
+    justify-content: flex-end;
+}
 .actions__bottom {}
 
 // component LevelCardExpanded
